[tool.poetry]
name = "fastws"
version = "0.1.6"
description = "FastWS framework. A WebSocket wrapper around FastAPI with auto-documentation using AsyncAPI."
authors = ["Endre Krohn <endre@skript.no>"]
readme = "README.md"
packages = [{ include = "fastws" }]
repository = "https://github.com/endrekrohn/fastws"
documentation = "https://github.com/endrekrohn/fastws"
keywords = ["fastapi", "pydantic", "starlette", "websockets", "asyncapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.100.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
black = "^23.3.0"
ruff = "^0.0.277"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
